--- a/argocd/application.yml
+++ b/argocd/application.yml
@@ -8,8 +8,8 @@ spec:
   - git:
       repoURL: https://github.com/tannerru/K3s_Manifests.git
       revision: HEAD
-      directories:
-      - path: argocd/*
+      directory:
+        recurse: true
   template:
     metadata:
       name: '{{path.basename}}'
