--- a/argocd/application.yml
+++ b/argocd/application.yml
@@ -2,7 +2,6 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: servarr
-  namespace: media
 spec:
   generators:
   - git:
@@ -12,7 +11,7 @@ spec:
       - path: argocd/*
   template:
     metadata:
-      name: '{{path[0]}}'
+      name: '{{path.basename}}'
     spec:
       project: default
       source:
