--- a/argocd/scada_lab/applications/backend/service.yml
+++ b/argocd/scada_lab/applications/backend/service.yml
@@ -24,6 +24,6 @@ spec:
  
     
   selector:    
-    app: scada_backend
+    app: scada-backend
   type: LoadBalancer
   loadBalancerIP: 10.0.40.170
