--- a/argocd/scada_lab/applications/database/storage.yml
+++ b/argocd/scada_lab/applications/database/storage.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: scadabackdb-data
+  name: scadadb-data
   namespace: scada
 spec:
   accessModes:
