--- a/argocd/scada_lab/applications/frontend/storage.yml
+++ b/argocd/scada_lab/applications/frontend/storage.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: scadabackfrontend-data
+  name: scadafrontend-data
   namespace: scada
 spec:
   accessModes:
