--- a/argocd/scada_lab/applications/database/service.yml
+++ b/argocd/scada_lab/applications/database/service.yml
@@ -1,22 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: scadadb-service
-  
-  namespace: scada
+  name: mariadb
   labels:
-    app: scadadb_service
+    app: mariadb
 spec:
-  externalTrafficPolicy: Cluster
   ports:
-  - name: port3060
-    port: 3060
-    protocol: TCP
-    targetPort: 3060
-
- 
-    
-  selector:    
-    app: scada-db
-  type: LoadBalancer
-  loadBalancerIP: 10.0.40.172
+  - port: 3306
+  clusterIP: None
+  selector:
+    app: mariadb
