changed mariadb to latest release

--- a/argocd/scada_lab/applications/database/deployment.yml
+++ b/argocd/scada_lab/applications/database/deployment.yml
@@ -16,7 +16,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
       - name: mariadb
-        image: mariadb:10.5.8
+        image: mariadb:latest
         ports:
         - containerPort: 3306
         volumeMounts:
