attempting to run a command from manifest

--- a/argocd/scada_lab/applications/frontend/deployment.yml
+++ b/argocd/scada_lab/applications/frontend/deployment.yml
@@ -34,6 +34,9 @@ spec:
             containerPort: 8043
           - name: port8060
             containerPort: 8060
+          
+          command:
+           - n frontend-gateway -a 127.0.0.1 -h 8088 -s 8043
        
           volumeMounts:
             - name: scadafrontend-data
