--- a/argocd/scada_lab/applications/backend/service.yml
+++ b/argocd/scada_lab/applications/backend/service.yml
@@ -19,11 +19,11 @@ spec:
     targetPort: 8043
   - name: port8060
     port: 8060
-    protocol: UDP
+    protocol: TCP
     targetPort: 8060
  
     
   selector:    
     app: scada-backend
   type: LoadBalancer
-  loadBalancerIP: 10.0.40.170
+  loadBalancerIP: 10.0.40.17
