--- a/argocd/scada_lab/applications/database/service.yml
+++ b/argocd/scada_lab/applications/database/service.yml
@@ -10,3 +10,20 @@ spec:
   clusterIP: None
   selector:
     app: mariadb
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mariad-read
+  labels:
+    app: mariadb
+    app.kubernetes.io/name: mariadb
+    readonly: "true"
+spec:
+  ports:
+  - name: mariadb
+    port: 3306
+  selector:
+    app: mariadb
