--- a/argocd/scada_lab/applications/database/service.yml
+++ b/argocd/scada_lab/applications/database/service.yml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mariadb
+  name: mariadb-service
   labels:
     app: mariadb
 spec:
   ports:
   - port: 3306
+    name: mariadb-port
   clusterIP: None
   selector:
     app: mariadb
