messed up secret

--- a/argocd/scada_lab/applications/database/dbsecret.yml
+++ b/argocd/scada_lab/applications/database/dbsecret.yml
@@ -4,4 +4,4 @@ metadata:
     name: mariadb-secret
 type: Opaque
 data:
-  mariadb-root-password: password # echo -n 'secret'|base64
+  mariadb-root-password: cGFzc3dvcmQ= # echo -n 'secret'|base64
