can't login to db

--- a/argocd/scada_lab/applications/database/dbsecret.yml
+++ b/argocd/scada_lab/applications/database/dbsecret.yml
@@ -4,4 +4,5 @@ metadata:
     name: mariadb-secret
 type: Opaque
 data:
-  mariadb-root-password: cGFzc3dvcmQ= # echo -n 'password'|base64
+  # Encoded value: echo -n 'secret'|base64
+  mariadb-root-password: c2VjcmV0 
