latest mariadb image

--- a/argocd/scada_lab/applications/database/statefulset.yml
+++ b/argocd/scada_lab/applications/database/statefulset.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       initContainers:
       - name: init-mariadb
-        image: mariadb
+        image: mariadb:latest
         imagePullPolicy: Always
         command:
         - bash
