--- a/argocd/scada_lab/applications/backend/scale.yml
+++ b/argocd/scada_lab/applications/backend/scale.yml
@@ -7,7 +7,7 @@ spec:
   maxReplicas: 10
   minReplicas: 1
   scaleTargetRef:
-    apiVersion: extensions/v1beta1
+    apiVersion: extensions/v1
     kind: Deployment
     name: scadabackend
   targetCPUUtilizationPercentage: 20
