--- a/argocd/scada_lab/applications/backend/scale.yml
+++ b/argocd/scada_lab/applications/backend/scale.yml
@@ -9,5 +9,5 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: scadabackend
+    name: scadabackend-deploy
   targetCPUUtilizationPercentage: 20
