--- a/argocd/scada_lab/applications/backend/scale.yml
+++ b/argocd/scada_lab/applications/backend/scale.yml
@@ -4,6 +4,7 @@ metadata:
   name: scada-backend
   namespace: scada
 spec:
+  initialReadinessDelay: 60
   maxReplicas: 10
   minReplicas: 1
   scaleTargetRef:
