--- a/argocd/scada_lab/applications/backend/deployment.yml
+++ b/argocd/scada_lab/applications/backend/deployment.yml
@@ -36,7 +36,7 @@ spec:
        
           volumeMounts:
             - name: scadabackend-data
-              mountPath: /var/lib/ignition/data
+              mountPath: /usr/local/bin/ignition/data
 
       volumes:
          - name: scadabackend-data
