--- a/argocd/scada_lab/applications/backend/looking.yml
+++ b/argocd/scada_lab/applications/backend/looking.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ignition-enterprise
-  namespace: ignition-enterprise
+  name: scada-backend
+  namespace: scada
 spec:
   selector:
     matchLabels:
-      app: ignition-enterprise-application
+      app: scada-backend
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: ignition-enterprise-application
+        app: scadabackend-deploy
     spec:
       initContainers:
       - name: seed-volume
-        image: inductiveautomation/ignition:8.1.17
+        image: kcollins/ignition:latest
         resources:
           limits:
             memory: "256Mi"
@@ -31,10 +31,10 @@ spec:
           fi
         volumeMounts:
         - mountPath: /data
-          name: ignition-pv-enterprise-volume
+          name: scadabackend-data
       containers:
-      - name: ignition
-        image: inductiveautomation/ignition:8.1.17
+      - name: scada-backend
+        image: kcollins/ignition:latest
         resources:
           limits:
             memory: "4096Mi"
@@ -58,7 +58,7 @@ spec:
           containerPort: 8043
         volumeMounts:
         - mountPath: /usr/local/bin/ignition/data
-          name: ignition-pv-enterprise-volume
+          name: scadabackend-data
         readinessProbe:
           exec:
             command:
@@ -70,6 +70,6 @@ spec:
           failureThreshold: 10
           timeoutSeconds: 3
       volumes:
-      - name: ignition-pv-enterprise-volume
+      - name: scadabackend-data
         persistentVolumeClaim:
-         claimName: ignition-pv-enterprise-claim
+         claimName: scadabackend-data
