--- a/argocd/scada_lab/applications/backend/looking.yml
+++ b/argocd/scada_lab/applications/backend/looking.yml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: scadabackend-deploy
+        app: scadabackend
     spec:
       initContainers:
       - name: seed-volume
