testing other yml again

--- a/argocd/scada_lab/applications/backend/looking.yml
+++ b/argocd/scada_lab/applications/backend/looking.yml
@@ -52,7 +52,7 @@ spec:
         - name: ignition-https
           containerPort: 8043
         volumeMounts:
-        - mountPath: /usr/local/bin/ignition/data
+        - mountPath: /data
           name: scadabackend-data
         readinessProbe:
           exec:
