--- a/argocd/scada_lab/applications/backend/storage.yml
+++ b/argocd/scada_lab/applications/backend/storage.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: scada
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   storageClassName: longhorn
   resources:
     requests:
