--- a/argocd/scada_lab/applications/database/db.yml
+++ b/argocd/scada_lab/applications/database/db.yml
@@ -46,12 +46,8 @@ spec:
         volumeMounts:
         - name: mariadb-data
           mountPath: /var/lib/mysql
-  volumeClaimTemplates:
-  - metadata:
-      name: mariadb-data
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: longhorn
-      resources:
-        requests:
-          storage: 1Gi
+  volumes:
+      - name: mariadb-data
+        persistentVolumeClaim:
+         claimName: mariadb-data
+
