--- a/argocd/scada_lab/applications/database/db2.yml
+++ b/argocd/scada_lab/applications/database/db2.yml
@@ -1,33 +1,33 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: mariadb-replication
+  name: mysql-replication
 spec:
   selector:
     matchLabels:
-      app: mariadb-replication
-  serviceName: mariadb
+      app: mysql-replication
+  serviceName: mysql
   replicas: 3
   template:
     metadata:
       labels:
-        app: mariadb-replication
+        app: mysql-replication
     spec:
       initContainers:
       - name: create-database
-        image: mariadb:10.5.5
+        image: mysql:8.0
         command:
         - sh
         - -c
         - |
           set -e
-          echo "CREATE DATABASE ignition_db;" | mysql --user=root --password=password --host=mariadb
+          echo "CREATE DATABASE ignition_db;" | mysql --user=root --password=password --host=mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: password
       containers:
-      - name: mariadb
-        image: mariadb:10.5.5
+      - name: mysql
+        image: mysql:8.0
         ports:
         - containerPort: 3306
         env:
@@ -40,15 +40,15 @@ spec:
         - name: MYSQL_REPLICATION_MODE
           value: "true"
         - name: MYSQL_REPLICATION_MASTER_HOST
-          value: mariadb-replication-0.mariadb
+          value: mysql-replication-0.mysql
         - name: MYSQL_REPLICATION_MASTER_PORT
           value: "3306"
         volumeMounts:
-        - name: mariadb-data
+        - name: mysql-data
           mountPath: /var/lib/mysql
   volumeClaimTemplates:
   - metadata:
-      name: mariadb-data
+      name: mysql-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
       storageClassName: longhorn
