--- a/argocd/scada_lab/applications/database/rwservice.yml
+++ b/argocd/scada_lab/applications/database/rwservice.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mariadb-service
+  name: mysql-service
   labels:
-    app: mariadb-replication
+    app: mysql-replication
 spec:
   ports:
   - port: 3306
-    name: mariadb-port
+    name: mysql-port
   clusterIP: None
   selector:
-    app: mariadb-replication
+    app: mysql-replication
