--- a/argocd/scada_lab/applications/backend/deployment.yml
+++ b/argocd/scada_lab/applications/backend/deployment.yml
@@ -1,15 +1,14 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: scada-backend
   namespace: scada
 spec:
+  servicename: "scadabackend-service"
   replicas: 1
   selector:
     matchLabels:
       app: scada-backend
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
@@ -65,13 +64,12 @@ spec:
           periodSeconds: 10
           failureThreshold: 10
           timeoutSeconds: 3
-          
   volumeClaimTemplates:
   - metadata:
       name: scadabackend-data
     spec:
-      accessModes: [ "ReadWriteMany" ]
+      accessModes: [ "ReadWriteOnce" ]
       storageClassName: longhorn
       resources:
         requests:
-           storage: 10Gi
+          storage: 300M10Gi
