--- a/argocd/scada_lab/applications/backend/statefultest.yml
+++ b/argocd/scada_lab/applications/backend/statefultest.yml
@@ -29,8 +29,8 @@ spec:
             cp -dpR /usr/local/bin/ignition/data/* /data/ ;
           fi
       volumeMounts:
-        - mountPath: /data
-          name: scadabackend-data
+        - name: scadabackend-data
+          mountPath: /data
       containers:
       - name: scadabackend
         image: inductiveautomation/ignition:8.1.17
@@ -46,9 +46,11 @@ spec:
           value: “America/Chicago”
         - name: IGNITION_EDITION
           value: standard
-        volumes:
-        - mountPath: /usr/local/bin/ignition/data
-          name: scadabackend-data
+        volumeMounts:
+        - name: scadabackend-data
+          mountPath: /usr/local/bin/ignition/data
+        
+        
 
   volumeClaimTemplates:
   - metadata:
