--- a/argocd/scada_lab/applications/backend/statefultest.yml
+++ b/argocd/scada_lab/applications/backend/statefultest.yml
@@ -16,10 +16,7 @@ spec:
       initContainers:
       - name: seed-volume
         image: inductiveautomation/ignition:8.1.17
-        resources:
-          limits:
-            memory: "4096i"
-            cpu: "1000m"
+        imagePullPolicy: Always
         command:
         - sh
         - -c
@@ -28,9 +25,9 @@ spec:
             touch /data/.ignition-seed-complete ;
             cp -dpR /usr/local/bin/ignition/data/* /data/ ;
           fi
-      volumeMounts:
-        - name: scadabackend-data
-          mountPath: /data
+        volumeMounts:
+          - name: scadabackend-data
+            mountPath: /data
       containers:
       - name: scadabackend
         image: inductiveautomation/ignition:8.1.17
