--- a/argocd/scada_lab/applications/backend/deployment.yml
+++ b/argocd/scada_lab/applications/backend/deployment.yml
@@ -23,8 +23,6 @@ spec:
             memory: "256Mi"
             cpu: "1000m"
         command:
-        - n ignition-backend
-        - m 2096
         - sh
         - -c
         - >
@@ -42,6 +40,10 @@ spec:
           limits:
             memory: "4096Mi"
             cpu: "1000m"
+        
+        command:
+        - n ignition-backend
+        - m 2096
         env:
         - name: ACCEPT_IGNITION_EULA
           value: "Y"
