--- a/argocd/scada_lab/applications/backend/deployment.yml
+++ b/argocd/scada_lab/applications/backend/deployment.yml
@@ -42,8 +42,8 @@ spec:
             cpu: "1000m"
         
         command:
-        - n ignition-backend
-        - m 2096
+        - n "ignition-backend"
+        - m "2096"
         env:
         - name: ACCEPT_IGNITION_EULA
           value: "Y"
