--- a/argocd/Media/applications/radarr/deployment.yml
+++ b/argocd/Media/applications/radarr/deployment.yml
@@ -38,7 +38,8 @@ spec:
             - name: config
               mountPath: /config
 
-            
+            - name: jellyfin
+              mountPath: /tmp
 
       volumes:
         - name: media
@@ -46,7 +47,9 @@ spec:
             server: 10.0.50.4
             path: /mnt/Slow/Media
 
-      
+        - name: jellyfin
+          persistentVolumeClaim:
+            claimName: jellyfin-config
             
         - name: config
           persistentVolumeClaim:
