--- a/argocd/Network/applications/pihole/svc-pihole-tcp-nodeport.yml
+++ b/argocd/Network/applications/pihole/svc-pihole-tcp-nodeport.yml
@@ -6,19 +6,17 @@ metadata:
   name: pihole-tcp
   namespace: default
 spec:
-  externalTrafficPolicy: Local
+  externalTrafficPolicy: Cluster
   ports:
   - name: dns
-    targetPort: dns
     protocol: TCP
     port: 53
     targetPort: dns
   - name: pihole-http
     port: 80
-    nodePort: 30007
     protocol: TCP
     targetPort: pihole-http
   selector:
     app: pihole
   sessionAffinity: None
-  type: NodePort
+  type: LoadBalancer
