--- a/argocd/Network/applications/pihole/storage.yml
+++ b/argocd/Network/applications/pihole/storage.yml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  labels:
-    app: pihole
   name: pihole-config
+  namespace: network
 spec:
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: longhorn
   resources:
     requests:
-      storage: 500Mi
-status: {}
+      storage: 2Gi
