--- a/argocd/Network/applications/pihole/deployment.yml
+++ b/argocd/Network/applications/pihole/deployment.yml
@@ -45,4 +45,4 @@ spec:
       volumes:  
         - name: config
           persistentVolumeClaim:
-             claimName: radarr-config
+             claimName: pihole-config
