--- a/argocd/Media/applications/jellyfin_accounts/deployment.yml
+++ b/argocd/Media/applications/jellyfin_accounts/deployment.yml
@@ -34,7 +34,7 @@ spec:
             - name: config
               mountPath: /data
 
-                    
-        - name: config
-          persistentVolumeClaim:
+       volumes:             
+       - name: config
+         persistentVolumeClaim:
              claimName: jellyfinaccount-config
