--- a/argocd/Network/applications/homarr/deployment.yml
+++ b/argocd/Network/applications/homarr/deployment.yml
@@ -38,7 +38,7 @@ spec:
             - name: config
               mountPath: /app/public/icons
 
-            
+      volumes:
         - name: config
           persistentVolumeClaim:
              claimName: homarr-config
