--- a/argocd/Media/applications/radarr/deployment.yml
+++ b/argocd/Media/applications/radarr/deployment.yml
@@ -24,11 +24,11 @@ spec:
           image: linuxserver/radarr
           resources:
             requests: 
-              memory: 2Gi
-              cpu: 1000m
+              memory: 500m
+              cpu: 500m
             limits:
               memory: 4Gi
-              cpu: 2000m
+              
           ports:
             - containerPort: 7878
           volumeMounts:
