--- a/argocd/Network/applications/pihole/deployment.yml
+++ b/argocd/Network/applications/pihole/deployment.yml
@@ -22,11 +22,11 @@ spec:
           image: pihole/pihole
           resources:
             requests: 
-              memory: 2Gi
-              cpu: 1000m
+              memory: 500m
+              cpu: 500m
             limits:
               memory: 4Gi
-              cpu: 2000m
+             
           ports:
             - containerPort: 80
             - containerPort: 53
