--- a/argocd/Network/applications/cloudflare/deployment.yml
+++ b/argocd/Network/applications/cloudflare/deployment.yml
@@ -36,11 +36,11 @@ spec:
         image: cloudflare/cloudflared:latest
         resources:
             requests: 
-              memory: 1Gi
+              memory: 500m
               cpu: 200m
             limits:
               memory: 4Gi
-              cpu: 2000m
+             
         name: cloudflared
         livenessProbe:
           httpGet:
