--- a/argocd/Media/applications/sabnzbd/deployment.yml
+++ b/argocd/Media/applications/sabnzbd/deployment.yml
@@ -37,7 +37,7 @@ spec:
         
           volumeMounts:
             - name: media
-              mountPath: media/Downloads
+              mountPath: /media
 
             - name: config
               mountPath: /config
@@ -46,7 +46,7 @@ spec:
         - name: media
           nfs:
             server: 10.0.50.4
-            path: /mnt/Slow/Media
+            path: /mnt/Slow/Media/Downloads
 
         - name: config
           persistentVolumeClaim:
