messed this one up a bit

--- a/argocd/Media/applications/prowlarr/deployment.yml
+++ b/argocd/Media/applications/prowlarr/deployment.yml
@@ -31,11 +31,11 @@ spec:
               
           ports:
             - containerPort: 9696
-        
+          volumeMounts:
             - name: config
               mountPath: /config  
 
-    
+      volumes:
         - name: config
           persistentVolumeClaim:
              claimName: prowlarr-config
