--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -22,8 +22,10 @@ spec:
         - name: delugevpn
           
           image: binhex/arch-delugevpn
-          cap_add:
-            - NET_ADMIN
+          securityContext:
+            capabilities:
+             add:
+               - NET_ADMIN
           resources:
             requests: 
               memory: 500m
