--- a/argocd/Media/applications/delugevpn/service.yml
+++ b/argocd/Media/applications/delugevpn/service.yml
@@ -9,14 +9,18 @@ metadata:
 spec:
   externalTrafficPolicy: Cluster
   ports:
-  - name: http
-    port: 8080
-    protocol: TCP
-    targetPort: 8080
-  - name: http2
-    port: 8090
-    protocol: TCP
-    targetPort: 8090
+  - name: port8112
+    port: 8112
+    targetPort: 8112
+  - name: port8118
+    port: 8118
+    targetPort: 8118
+  - name: port58846
+    port: 58846
+    targetPort: 58846
+  - name: port58946
+    port: 58946
+    targetPort: 58946
    
   selector:    
     app: delugevpn
