--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -53,7 +53,9 @@ spec:
             value: info
           - name: UMASK
           - name: PUID
+            value: "1000"
           - name: PGID
+            value: "1000"
 
              
           ports:
