--- a/argocd/Media/applications/delugevpn/secret/secret.yml
+++ b/argocd/Media/applications/delugevpn/secret/secret.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: deluge-secret
-  namespace: network
+  namespace: media
 type: Opaque
 stringData:
     VPN_USER : "6342712780708743"
