--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -52,7 +52,7 @@ spec:
           - name: STRICT_PORT_FORWARD
             value: "yes"
           - name: ENABLE_PRIVOXY
-            value: "yes"
+            value: "no"
           - name: LAN_NETWORK
             value: 10.0.40.0/24
           - name: NAME_SERVERS
