--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -14,8 +14,8 @@ spec:
     metadata:
       labels:
         app: delugevpn
-      #annotations:
-        #k8s.v1.cni.cncf.io/networks: macvlan-conf
+      annotations:
+        k8s.v1.cni.cncf.io/networks: macvlan-conf
       
     spec:
       containers:
