--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -23,10 +23,11 @@ spec:
           
           image: binhex/arch-delugevpn
           securityContext:
+            privileged: true 
             capabilities:
              add:
                - NET_ADMIN
-               - CAP_SYS_ADMIN
+              
           resources:
             requests: 
               memory: 500m
@@ -67,8 +68,7 @@ spec:
             value: "1000"
           - name: PGID
             value: "1000"
-
-             
+ 
           ports:
           - name: port8112
             containerPort: 8112
