--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -46,7 +46,7 @@ spec:
                 name: deluge-secret
                 key: VPN_PASS
           - name: VPN_CLIENT
-            value: openvpn
+            value: wireguard
           - name: VPN_ENABLED
             value: "yes"
           - name: VPN_PROV
