--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -23,6 +23,9 @@ spec:
           
           image: binhex/arch-delugevpn
           securityContext:
+            sysctls:
+             - name: sysctl="net.ipv4.conf.all.src_valid_mark=1" 
+               value: 1
             privileged: true 
             capabilities:
              add:
