--- a/argocd/scada_lab/applications/database/db.yml
+++ b/argocd/scada_lab/applications/database/db.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mariadb-configmap
+  namespace: scada
 data:
 
   primary.cnf: |
@@ -34,6 +35,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: mariadb-secret
+    namespace: scada
 type: Opaque
 data:
   mariadb-root-password: c2VjcmV0 # echo -n 'secret'|base64
@@ -44,6 +46,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mariadb-service
+  namespace: scada
   labels:
     app: mariadb
 spec:
@@ -60,6 +63,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mariadb-sts
+  namespace: scada
 spec:
   serviceName: "mariadb-service"
   replicas: 3
@@ -149,6 +153,7 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: datadir
+      namespace: scada
     spec:
       accessModes: [ "ReadWriteOnce" ]
       storageClassName: longhorn
