--- a/flux/scada_lab/database/secret.yml
+++ b/flux/scada_lab/database/secret.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mariadb-secret
+  namespace: scada
 type: Opaque
 stringData:
   mariadb-root-password: password
