--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -49,7 +49,7 @@ spec:
           - name: VPN_PROV
             value: custom
           - name: STRICT_PORT_FORWARD
-            value: "yes"
+            value: "no"
           - name: ENABLE_PRIVOXY
             value: "no"
           - name: LAN_NETWORK
