--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -86,7 +86,7 @@ spec:
         - name: media
           nfs:
             server: 10.0.40.4
-            path: /mnt/Slow/Media/Downloads
+            path: /mnt/Slow/Media
 
         - name: config
           persistentVolumeClaim:
