--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -20,7 +20,7 @@ spec:
       containers:
         - name: delugevpn
           
-          image: binhex/arch-delugevpn
+          image: binhex/arch-delugevpn:2.1.1-3-02
           securityContext:
             privileged: true 
           
