--- a/argocd/Media/applications/books/calibre-web/deployment.yml
+++ b/argocd/Media/applications/books/calibre-web/deployment.yml
@@ -33,7 +33,7 @@ spec:
           - name: port8083
             containerPort: 8083
 
-          volumemounts:
+          volumeMounts:
           - name: config
             mountPath: /config
 
